force-app/main/default/objects/Pre_Call_Planner__c/Pre_Call_Planner__c.object-meta.xml
<CustomObject>
    <label>Pre-Call Planner</label>
    <nameField>
        <label>Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Call Planner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>