force-app/main/default/objects/Pre_Call_Planner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pre-Call Planner</relationshipLabel>
    <relationshipName>Pre_Call_Planner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>