force-app/main/default/objects/Pre_Call_Planner__c/fields/Action_Steps_1__c.field-meta.xml
<CustomField>
    <fullName>Action_Steps_1__c</fullName>
    <label>Action Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>