force-app/main/default/objects/Pre_Call_Planner__c/fields/Bonding_and_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Bonding_and_Rapport__c</fullName>
    <label>Bonding and Rapport</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>