force-app/main/default/objects/Pre_Call_Planner__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>