force-app/main/default/objects/Pre_Call_Planner__c/fields/Call_Debriefing_Tool_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Debriefing_Tool_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://bookingninjas.my.salesforce.com/apex/CallDebriefing?Id=&apos; + Id , &apos;https://bookingninjas.my.salesforce.com/apex/CallDebriefing?Id=&apos; + Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Debriefing Tool Link</label>
    <type>Text</type>
</CustomField>