force-app/main/default/objects/Pre_Call_Planner__c/fields/Client_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Call Planner</relationshipLabel>
    <relationshipName>Pre_Call_Planner</relationshipName>
    <type>Lookup</type>
</CustomField>