force-app/main/default/objects/Pre_Call_Planner__c/fields/Client_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Call Planner (Client Contact 2)</relationshipLabel>
    <relationshipName>Pre_Call_Planner1</relationshipName>
    <type>Lookup</type>
</CustomField>