force-app/main/default/objects/Pre_Call_Planner__c/fields/Client_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Call Planner (Client Contact 3)</relationshipLabel>
    <relationshipName>Pre_Call_Planner2</relationshipName>
    <type>Lookup</type>
</CustomField>