force-app/main/default/objects/Pre_Call_Planner__c/fields/Date_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Call__c</fullName>
    <label>Date of Call</label>
    <type>Date</type>
</CustomField>