force-app/main/default/objects/Pre_Call_Planner__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>