force-app/main/default/objects/Pre_Call_Planner__c/fields/DISC_Style_2__c.field-meta.xml
<CustomField>
    <fullName>DISC_Style_2__c</fullName>
    <label>DISC Style 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>