force-app/main/default/objects/Pre_Call_Planner__c/fields/Existing_Relationship_3__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationship_3__c</fullName>
    <label>Existing Relationship 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Enemy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>