force-app/main/default/objects/Pre_Call_Planner__c/fields/Goals_For_Call__c.field-meta.xml
<CustomField>
    <fullName>Goals_For_Call__c</fullName>
    <label>Goals For Call</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>