force-app/main/default/objects/Pre_Call_Planner__c/fields/Impact_On_This_Deal_3__c.field-meta.xml
<CustomField>
    <fullName>Impact_On_This_Deal_3__c</fullName>
    <label>Impact On This Deal 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>