force-app/main/default/objects/Pre_Call_Planner__c/fields/Intended_Result_1__c.field-meta.xml
<CustomField>
    <fullName>Intended_Result_1__c</fullName>
    <label>Intended Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>