force-app/main/default/objects/Pre_Call_Planner__c/fields/KARE_Designation__c.field-meta.xml
<CustomField>
    <fullName>KARE_Designation__c</fullName>
    <label>KARE Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Attain</fullName>
            </value>
            <value>
                <fullName>Recapture</fullName>
            </value>
            <value>
                <fullName>Expand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>