force-app/main/default/objects/Pre_Call_Planner__c/fields/Key_Questions_To_Ask__c.field-meta.xml
<CustomField>
    <fullName>Key_Questions_To_Ask__c</fullName>
    <label>Key Questions To Ask</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>