force-app/main/default/objects/Pre_Call_Planner__c/fields/Met_Before_1__c.field-meta.xml
<CustomField>
    <fullName>Met_Before_1__c</fullName>
    <label>Met Before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>