force-app/main/default/objects/Pre_Call_Planner__c/fields/New_Information_Learned__c.field-meta.xml
<CustomField>
    <fullName>New_Information_Learned__c</fullName>
    <label>New Information Learned</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>