force-app/main/default/objects/Pre_Call_Planner__c/fields/Next_Steps_Planned__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Planned__c</fullName>
    <label>Next Steps Planned</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>