force-app/main/default/objects/Pre_Call_Planner__c/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <label>Pain</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>