force-app/main/default/objects/Pre_Call_Planner__c/fields/Planned_Up_Front_Contract__c.field-meta.xml
<CustomField>
    <fullName>Planned_Up_Front_Contract__c</fullName>
    <label>Planned Up-Front Contract</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>