force-app/main/default/objects/Pre_Call_Planner__c/fields/Post_Sell__c.field-meta.xml
<CustomField>
    <fullName>Post_Sell__c</fullName>
    <label>Post Sell</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>