force-app/main/default/objects/Pre_Call_Planner__c/fields/Pre_Call_Planner_Link__c.field-meta.xml
<CustomField>
    <fullName>Pre_Call_Planner_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://bookingninjas.my.salesforce.com/apex/PreCallPlanning?Id=&apos; + Id , &apos;https://bookingninjas.my.salesforce.com/apex/PreCallPlanning?Id=&apos; + Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Call Planner Link</label>
    <type>Text</type>
</CustomField>