force-app/main/default/objects/Pre_Call_Planner__c/fields/Questions_The_Buyer_May_Ask_You__c.field-meta.xml
<CustomField>
    <fullName>Questions_The_Buyer_May_Ask_You__c</fullName>
    <label>Questions The Buyer May Ask You</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>