force-app/main/default/objects/Pre_Call_Planner__c/fields/Questions_Topics_For_Next_Contact__c.field-meta.xml
<CustomField>
    <fullName>Questions_Topics_For_Next_Contact__c</fullName>
    <label>Questions/Topics For Next Contact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>