force-app/main/default/objects/Pre_Call_Planner__c/fields/Red_Flags_Potential_Problems_Uncovered__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags_Potential_Problems_Uncovered__c</fullName>
    <label>Red Flags/Potential Problems Uncovered</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>