force-app/main/default/objects/Pre_Call_Planner__c/fields/Role_1__c.field-meta.xml
<CustomField>
    <fullName>Role_1__c</fullName>
    <label>Role 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>