force-app/main/default/objects/Pre_Call_Planner__c/fields/Role_2__c.field-meta.xml
<CustomField>
    <fullName>Role_2__c</fullName>
    <label>Role 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>