force-app/main/default/objects/Pre_Call_Planner__c/fields/Role_3__c.field-meta.xml
<CustomField>
    <fullName>Role_3__c</fullName>
    <label>Role 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>