force-app/main/default/objects/Pre_Call_Planner__c/fields/Selling_Team_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Selling_Team_Attendees__c</fullName>
    <label>Selling Team Attendees</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>