force-app/main/default/objects/Pre_Call_Planner__c/fields/When_1__c.field-meta.xml
<CustomField>
    <fullName>When_1__c</fullName>
    <label>When?</label>
    <type>Date</type>
</CustomField>