force-app/main/default/objects/Pre_Call_Planner__c/fields/Who_2__c.field-meta.xml
<CustomField>
    <fullName>Who_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Call Planner (Who?)</relationshipLabel>
    <relationshipName>Pre_Call_Planner5</relationshipName>
    <type>Lookup</type>
</CustomField>