force-app/main/default/objects/Pre_Call_Planner__c/fields/X30_Seconds_Commercial__c.field-meta.xml
<CustomField>
    <fullName>X30_Seconds_Commercial__c</fullName>
    <label>30 Seconds Commercial</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>