force-app/main/default/objects/Pre_Call_Planner__c/fields/Your_Responses_To_These_Questions__c.field-meta.xml
<CustomField>
    <fullName>Your_Responses_To_These_Questions__c</fullName>
    <label>Your Responses To These Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>